<resources>
    <string name="app_name">Kumparan</string>
    <string name="title_activity_list_post">ListPostActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="post_title">Post Title</string>
    <string name="post_body">Post Body</string>
    <string name="posted_by">Posted By</string>
    <string name="list_post">List Post</string>
    <string name="comment_name">Comment Name</string>
    <string name="comment_body">Comment Body</string>
    <string name="comments">Comments</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="company">Company</string>
    <string name="albums">Albums</string>
    <string name="photo">Photo</string>
    <string name="photo_title">Photo Title</string>
</resources>