<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.userdetail.UserDetailActivity">

    <TextView
        style="@style/Text.Big"
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"/>

    <TextView
        style="@style/Text.Large"
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"/>

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"/>

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/tv_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="24dp"/>

    <TextView
        style="@style/Text.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/albums"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_albums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:listitem="@layout/item_album" />
</LinearLayout>