<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.detailpost.DetailPostActivity">

    <TextView
        style="@style/Text.Big"
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_title"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"/>

    <TextView
        style="@style/Text.Large"
        android:id="@+id/tv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/posted_by"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"/>

    <TextView
        style="@style/Text.Medium"
        android:id="@+id/tv_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_body"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"/>

    <TextView
        style="@style/Text.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="24dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="4dp"
        tools:listitem="@layout/item_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</LinearLayout>